--- a/src/Dyoub.Test/Dyoub.Test.csproj
+++ b/src/Dyoub.Test/Dyoub.Test.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Contexts\Catalog\PricingTables\ListPricingTableItemsContext.cs" />
     <Compile Include="Contexts\Catalog\PricingTables\ListPricingTableItemsForSaleContext.cs" />
     <Compile Include="Contexts\Catalog\PricingTables\ListPricingTablesContext.cs" />
+    <Compile Include="Contexts\Catalog\PricingTables\ListPricingTableProductsForRent.cs" />
     <Compile Include="Contexts\Catalog\PricingTables\UpdatePricingTableContext.cs" />
     <Compile Include="Contexts\Catalog\Products\CreateProductContext.cs" />
     <Compile Include="Contexts\Catalog\Products\DeleteProductContext.cs" />
@@ -154,6 +155,9 @@
     <Compile Include="Contexts\Commercial\RentContracts\ListRentContractsContext.cs" />
     <Compile Include="Contexts\Commercial\RentContracts\UpdateConfirmedRentContractContext.cs" />
     <Compile Include="Contexts\Commercial\RentContracts\UpdateRentContractContext.cs" />
+    <Compile Include="Contexts\Commercial\RentedProducts\ListRentedProductsContext.cs" />
+    <Compile Include="Contexts\Commercial\RentedProducts\UpdateProductsOfConfirmedRentContractContext.cs" />
+    <Compile Include="Contexts\Commercial\RentedProducts\UpdateRentedProductsContext.cs" />
     <Compile Include="Contexts\Commercial\SaleCustomer\FindSaleCustomerContext.cs" />
     <Compile Include="Contexts\Commercial\SaleCustomer\UpdateCustomerToConfirmedSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleCustomer\UpdateSaleCustomerContext.cs" />
@@ -244,6 +248,7 @@
     <Compile Include="Controllers\Commercial\PaymentMethodsControllerTest.cs" />
     <Compile Include="Controllers\Commercial\RentContractCustomerControllerTest.cs" />
     <Compile Include="Controllers\Commercial\RentContractsControllerTest.cs" />
+    <Compile Include="Controllers\Commercial\RentedProductsControllerTest.cs" />
     <Compile Include="Controllers\Commercial\SaleCustomerControllerTest.cs" />
     <Compile Include="Controllers\Commercial\SaleItemsControllerTest.cs" />
     <Compile Include="Controllers\Commercial\SaleOrdersControllerTest.cs" />
@@ -270,6 +275,7 @@
     <Compile Include="Factories\Catalog\ServicePriceFactory.cs" />
     <Compile Include="Factories\Commercial\PaymentMethodFactory.cs" />
     <Compile Include="Factories\Commercial\RentContractFactory.cs" />
+    <Compile Include="Factories\Commercial\RentedProductFactory.cs" />
     <Compile Include="Factories\Commercial\SaleOrderFactory.cs" />
     <Compile Include="Factories\Commercial\SalePaymentFactory.cs" />
     <Compile Include="Factories\Commercial\SaleProductFactory.cs" />
