--- a/src/Dyoub.Test/Dyoub.Test.csproj
+++ b/src/Dyoub.Test/Dyoub.Test.csproj
@@ -140,6 +140,11 @@
     <Compile Include="Contexts\Catalog\Services\UpdateServiceContext.cs" />
     <Compile Include="Contexts\Commercial\Customers\DeleteCustomerWithRentContractsContext.cs" />
     <Compile Include="Contexts\Commercial\Customers\DeleteCustomerWithSaleOrdersContext.cs" />
+    <Compile Include="Contexts\Commercial\Partners\CreatePartnerContext.cs" />
+    <Compile Include="Contexts\Commercial\Partners\DeletePartnerContext.cs" />
+    <Compile Include="Contexts\Commercial\Partners\FindPartnerContext.cs" />
+    <Compile Include="Contexts\Commercial\Partners\ListPartnerContext.cs" />
+    <Compile Include="Contexts\Commercial\Partners\UpdatePartnerContext.cs" />
     <Compile Include="Contexts\Commercial\PaymentMethods\CreatePaymentMethodContext.cs" />
     <Compile Include="Contexts\Commercial\PaymentMethods\DeletePaymentMethodContext.cs" />
     <Compile Include="Contexts\Commercial\PaymentMethods\FindPaymentMethodContext.cs" />
@@ -253,6 +258,7 @@
     <Compile Include="Controllers\Catalog\PricingTablesControllerTest.cs" />
     <Compile Include="Controllers\Catalog\ProductsControllerTest.cs" />
     <Compile Include="Controllers\Catalog\ServicesControllerTest.cs" />
+    <Compile Include="Controllers\Commercial\PartnersControllerTest.cs" />
     <Compile Include="Controllers\Commercial\PaymentMethodsControllerTest.cs" />
     <Compile Include="Controllers\Commercial\RentContractCustomerControllerTest.cs" />
     <Compile Include="Controllers\Commercial\RentContractsControllerTest.cs" />
@@ -283,6 +289,7 @@
     <Compile Include="Factories\Catalog\ProductPriceFactory.cs" />
     <Compile Include="Factories\Catalog\ServiceFactory.cs" />
     <Compile Include="Factories\Catalog\ServicePriceFactory.cs" />
+    <Compile Include="Factories\Commercial\PartnerFactory.cs" />
     <Compile Include="Factories\Commercial\PaymentMethodFactory.cs" />
     <Compile Include="Factories\Commercial\RentContractFactory.cs" />
     <Compile Include="Factories\Commercial\RentedProductFactory.cs" />
